# multilang_site

./: .gitignore  README.md
poetry-multilang-site/: pyproject.toml  requirements.txt
poetry-multilang-site/main/: models.py  replicate.py  test_main.py  tests.py  translation.py  urls.py  views.py
poetry-multilang-site/main/locale/de/LC_MESSAGES/: django.mo  django.po
poetry-multilang-site/main/locale/en/LC_MESSAGES/: django.mo  django.po
poetry-multilang-site/main/locale/fr/LC_MESSAGES/: django.mo  django.po
poetry-multilang-site/main/migrations/: 0001_initial.py  0002_article_content_de_article_content_en_and_more.py
poetry-multilang-site/main/static/: index.css
poetry-multilang-site/main/static/css/: chatbot.css  index.css
poetry-multilang-site/main/static/js/: llama_chat.js
poetry-multilang-site/main/static/main/css/: chatbot.css  detail.css
poetry-multilang-site/main/static/main/js/: select-language.js
poetry-multilang-site/main/templates/main/: detail.html  detail1.html  detail2.html  header.html  index.html  llm.html
poetry-multilang-site/multilang_site/: .env-example  settings.py  urls.py
poetry-multilang-site/multilang_site/locale/de/LC_MESSAGES/: django.mo  django.po
poetry-multilang-site/multilang_site/locale/en/LC_MESSAGES/: django.mo  django.po
poetry-multilang-site/multilang_site/locale/fr/LC_MESSAGES/: django.mo  django.po
