[tool.poetry]
name = "poetry-multilang-site"
version = "0.1.0"
description = ""
authors = ["cjezierski <corentin.jezierski@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_multilang_site"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pillow = "^10.3.0"
django-rosetta = "^0.10.0"
tox = "^4.15.1"
python-gettext = "^5.0"
django-modeltranslation = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
